--- a/app/src/main/res/layout/post_row_view.xml
+++ b/app/src/main/res/layout/post_row_view.xml
@@ -20,7 +20,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:src="@drawable/confessions_logo"
-                android:background="@color/colorPrimary"
+                android:background="#cdcece"
                 android:id="@+id/postImage"
                 android:layout_marginEnd="5dp"/>
             <TextView
